--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,48 @@
 body {
     margin: 0;
   }
+
   header {
-    background-color: #373738;
+    background-color: #20242F;
     padding: 15px;
+    text-align: center;
   }
+  /* For some reason my upper Heading text refuses to realign and I have tried to get it back*/
   header ul {
+    list-style: none;
     float: right;
     color: white;
+ 
   }
-  header li {
+
+  .header li {
     display: inline-block;
     padding: 0px 5px;
   }
+
   header p {
     display: inline-block;
   }
+
+.preloader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 100000;
+  background-color: white;
+  top: 0;
+  display: flex;
+  align-items: center;
+}
+
+.preloader img {
+  animation: spin 3s ease;
+  transition: all;
+  width: 150px;
+  margin: 0 auto;
+}
+
+  
   .heroImg {
     background-color: #EBEBEB;
     padding: 100px 15px;
@@ -24,7 +51,7 @@ body {
     max-width: 300px;
     margin: 0 auto;
     padding: 50px;
-    background-color: #FFFFFF;
+    
     text-align: center;
   }
   button {
@@ -35,7 +62,7 @@ body {
     border-radius: 4px;
   }
   footer {
-    background-color: #373738;
+    background-color: #20242F;
     padding: 5px;
     color: white;
   }
@@ -106,3 +133,16 @@ body {
     grid-area: content3;
   }
   
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    50% {
+      transform: rotate(360deg);
+    }
+
+    100% {
+      transform: rotate(720deg);
+    }
+    }
