--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 body {
+  background-color: #414040;
     margin: 0;
   }
 
   header {
-    background-color: #20242F;
+    
     padding: 15px;
     
   }
@@ -11,7 +12,7 @@ body {
   header ul {
     list-style: none;
     float: right;
-    color: white;
+    color: #EBEBEB;
  
   }
 
@@ -31,7 +32,7 @@ body {
   width: 100%;
   height: 100vh;
   z-index: 100000;
-  background-color: white;
+  background-color: #EBEBEB;
   top: 0;
   display: flex;
   align-items: center;
@@ -49,27 +50,26 @@ body {
 }
   
   .heroImg {
-    background-color: #EBEBEB;
+    background-color: #414040;
     padding: 100px 15px;
   }
   .content {
-    max-width: 300px;
     margin: 0 auto;
     padding: 50px;
-    
+    color: #EBEBEB;
     text-align: center;
   }
   button {
     padding: 15px;
-    background-color: #373738;
-    color: white;
+    background-color: #20242F;
+    color: #EBEBEB;
     font-size: 15px;
     border-radius: 4px;
   }
   footer {
     background-color: #20242F;
     padding: 5px;
-    color: white;
+    color: #EBEBEB;
   }
   footer ul {
     list-style: none;
@@ -83,11 +83,14 @@ body {
     text-align: center;
     padding: 15px 5px;
     font-size: 30px;
+    color: #EBEBEB;
   }
   /* My UX Skills Section */
   .flexContainer {
     display: flex;
     padding: 60px 30px;
+    color: #EBEBEB;
+    text-align: center;
   }
   .flexContainer div {
     width: 33%;
@@ -98,7 +101,7 @@ body {
   .myWork {
     padding: 60px 30px;
     padding-top: 0;
-    background-color: #EBEBEB;
+    background-color: #414040;
   }
   .workGrid {
     display: grid;
@@ -130,12 +133,15 @@ body {
   }
   .content1 {
     grid-area: content1;
+    color: #EBEBEB;
   }
   .content2 {
     grid-area: content2;
+    color: #EBEBEB;
   }
   .content3 {
     grid-area: content3;
+    color: #EBEBEB;
   }
   
   @keyframes spin {
